kube-103/jumpod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: jumpod
spec:
  containers:
  - name: shell
    image: centos:7
    command:
      - "bin/bash"
      - "-c"
      - "sleep 10000"
