kube-103/roles-test.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
 name: nginx-deployment
 labels:
   app: nginx
spec:
 replicas: 3
 selector:
   matchLabels:
     app: nginx
 template:
   metadata:
     labels:
       app: nginx
   spec:
     containers:
     - name: nginx
       image: nginx:1.7.8
       ports:
       - containerPort: 80
  
## kubectl --user=dinesh  apply -f roles-test.yaml
##  kubectl --user=dinesh  get pods

## kubectl --user=dinesh  delete pods nginx-deployment-XXX

## change nginx:1.7.8 => nginx:1.7.9
