kube-103/service-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: demoss
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: 9876
  selector:
    app: sise
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ssdep
spec:
  replicas: 2
  selector:
    matchLabels:
      app: sise
  template:
    metadata:
      labels:
        app: sise
    spec:
      containers:
      - name: sise
        image: quay.io/openshiftlabs/simpleservice:0.5.0
        ports:
        - containerPort: 9876


## kubectl exec -it jumpod -c shell -- ping demoss.default.svc.cluster.local
##  kubectl exec -it jumpod -c shell -- curl http://demoss/info
